Remove location with Ion-sliding

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,8 +8,11 @@
 
 <ion-content>
   <ion-list *ngFor="let location of locations">
-    <ion-item>
-      {{location.name}}
-    </ion-item>
+    <ion-item-sliding>
+      <ion-item>{{location.name}}</ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="deleteLocation(location.id)">Eliminar <ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
