--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,6 +7,14 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Cargando">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list *ngFor="let location of locations">
     <ion-item-sliding>
       <ion-item>{{location.name}}</ion-item>
